# winget

./: .gitignore  CHANGELOG.md  GIFT_NOTE.md  LICENSE  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/workflows/: release.yml
src/: App.tsx  index.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  models.rs  security.rs  winget.rs
src/api/: winget.ts
src/components/: AdvancedTab.tsx  ConsoleOutput.tsx  DeveloperInfo.tsx  FilterBar.tsx  PackageDetailsModal.tsx  PackageHealth.tsx  PackageItem.tsx
